--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -12,6 +12,7 @@ body {
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   min-height: 100vh;
   margin: 0;
   padding: 0;
@@ -43,10 +44,10 @@ aside {
 
 
 footer {
-  flex-direction: column;
   flex-grow: 1;
+  flex-direction: row;
   margin: .5em;
-  max-height: 10vh;
+  min-height: 10vh;
 }
 
 @media (min-width: 600px) {
@@ -62,11 +63,12 @@ footer {
 
   .flex {
     justify-content: stretch;
+    flex-basis: 70%;
   }
 
   footer {
-    flex-grow: 3;
-    flex-direction: row;
-    min-height: 80vh;
+    flex-grow: 4;
+    flex-direction: column;
+    max-height: 25vh;
   }
 }
