--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -12,34 +12,38 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-around;
+  box-sizing: border-box;
   min-height: 100vh;
-  margin: 0;
-  padding: 0;
 }
 
 
 header, footer {
-  display: flex;
   flex-grow: 1;
-
+  margin: .5em;
 }
 
 main {
-  display: flex;
   flex-grow: 2;
-  min-height: 90vh;
+  min-height: 65vh;
+}
+
+.c{
+  flex-grow: 4;
 }
 
 .d {
-  padding-left: 200px;
-  padding-right: 200px;
+  flex-grow: 4;
 }
 
+.e {
+  flex-grow: 4;
+} 
+
 aside {
-  display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   flex-grow: 2;
+  margin: .5em;
 }
 
 
@@ -47,7 +51,7 @@ footer {
   flex-grow: 1;
   flex-direction: row;
   margin: .5em;
-  min-height: 10vh;
+  min-height: 15vw;
 }
 
 @media (min-width: 600px) {
@@ -69,6 +73,6 @@ footer {
   footer {
     flex-grow: 4;
     flex-direction: column;
-    max-height: 25vh;
+    max-height: 25vw;
   }
 }
