--- a/medial-queries3/main.css
+++ b/medial-queries3/main.css
@@ -1,3 +1,49 @@
+* {
+  outline: 1px solid black;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 body {
-  background: peachpuff;
+  background: lightgray;
+  text-align: center;
+  font-size: 2em;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  min-height: 100vh;
+}
+
+header {
+  flex-grow: 2;
+  width: 100%;
+}
+
+.flex-1 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 85vh;
+}
+
+aside {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+
+main {
+  flex-grow: 5;
+}
+
+@media (min-width: 600px) {
+  .flex-1 {
+    flex-grow: 5;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
 }
