--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -16,7 +16,6 @@ body {
   min-height: 100vh;
 }
 
-
 header, footer, .flex {
   flex-grow: 1;
   margin: 1em;
@@ -52,7 +51,7 @@ footer {
 
   header {
     width: 100%;
-    max-height: 10vh;
+    min-height: 35vh;
 }
 
   .flex {
@@ -63,6 +62,6 @@ footer {
   footer {
     flex-grow: 4;
     flex-direction: column;
-    max-height: 25vw;
+    max-height: 35vw;
   }
 }
